deploy/releases/0.8.1/readme.adoc
= Open Liberty Operator v0.8.1

== Changelog

All notable changes are documented in the link:++https://github.com/OpenLiberty/open-liberty-operator/blob/main/CHANGELOG.md#081++[Changelog].

== Supported Environments

The Open Liberty Operator is tested and built on the following CPU architectures:

* amd64 (Supported with Installation options 1, 2 and 3)
* ppc64le (IBM Power. Supported with Installation options 2 and 3 only)
* s390x (IBM Z Linux. Supported with Installation options 2 and 3 only)

OpenShift 4.6 or higher is supported. The operator is also supported on any cluster that has Kubernetes v1.19 or higher.

== Installation

=== Option 1: Install using Operator Lifecycle Manager (OLM) on OpenShift

Note that only **amd64** is supported with this install option at the moment.

Open Liberty Operator is available from Red Hat's Certified OpenShift Operators catalog. From the integrated OperatorHub in OpenShift, filter by selecting `Certified` checkbox under `Source`. Search for `Open Liberty`. Click on the tile with `Open Liberty` to install the operator. Refer to the **Deploy and use** section link:++https://catalog.redhat.com/software/operators/detail/5e987455e1ad57318e25093f#deploy-instructions/++[here] for additional information on installing with OpenShift web console and the instructions for installing using `oc` CLI. While following the instructions for installing using the CLI, use the following `Subscription`. Replace `<install_namespace>` with the appropriate value:

```
apiVersion: operators.coreos.com/v1alpha1
kind: Subscription
metadata:
  name: open-liberty-certified
  namespace: <install_namespace>
spec:
  channel: beta2
  name: open-liberty-certified
  source: certified-operators
  sourceNamespace: openshift-marketplace
```

=== Option 2: Install using kustomize

See the instructions link:++kustomize/++[here].

=== Option 3: Install using kubectl

See the instructions link:++kubectl/++[here]

== Current Limitations

* Knative support is limited. Values specified for `.spec.autoscaling`, `.spec.resources` and `.spec.replicas` fields would not apply for Knative when enabled using `.spec.createKnativeService` field.
* Monitoring feature does not support integration with Knative Service. Prometheus Operator is required to use ServiceMonitor.
* After the initial deployment of `OpenLibertyApplication`, any changes to its labels would be applied only when one of the fields from `.spec` is updated.
